<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:id="@+id/header-aura-image"
            android:scaleType="centerCrop"
            android:background="@drawable/header_aura" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/header-aura-text"
            android:text="@string/device_scan_scan_and_detect"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_alignTop="@id/header-aura-image"
            android:layout_alignBottom="@id/header-aura-image"
            android:layout_alignLeft="@id/header-aura-image"
            android:layout_alignRight="@id/header-aura-image" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/device_scan_action_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/device_scan_button"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:textSize="15dp"
            android:textColor="@color/splashscreen_dark"
            android:background="@color/grey"
            android:layout_centerHorizontal="true"
            android:text="@string/device_scan_text"/>

        <ProgressBar
            android:id="@+id/device_scan_progress_bar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/device_scan_button"
            android:layout_alignTop="@id/device_scan_button"
            android:layout_alignBottom="@id/device_scan_button"
            android:indeterminateTint="@color/splashscreen_light"
            android:layout_centerVertical="true"
            android:visibility="gone"
            />
    </RelativeLayout>
    <Button
        android:id="@+id/device_start_monitoring_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:background="@color/splashscreen_light"
        android:layout_marginTop="40dp"
        android:visibility="gone"
        android:text="@string/device_scan_start_monitoring"/>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/discovered_device_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/device_scan_listview_border">
        </ListView>

        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:scaleX="0.3"
            android:scaleY="0.3"
            android:id="@+id/question_mark_image"
            android:gravity="center"
            android:layout_alignTop="@id/discovered_device_list_view"
            android:layout_alignBottom="@id/discovered_device_list_view"
            android:layout_alignLeft="@id/discovered_device_list_view"
            android:layout_alignRight="@id/discovered_device_list_view"
            android:src="@drawable/question_mark" />

    </RelativeLayout>

</LinearLayout>

